Fix T39825: Crash on startup with tablet